# rscodes

./: Dockerfile  README.md  docker-compose.yml  setup.cfg
src/rscodes/: __init__.py  __version__.py  polynomial.py  reed_solomon.py  reed_solomon_wb.py
tests/: fixtures.py  test_reed_solomon.py  test_reed_solomon_wb.py
