[metadata]
name = rscodes
version = 0.0.0.dev0
author = Decentralized Systems Labs
description = Experimental Reed Solomon Codec
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/initc3/rscodes
project_urls =
    Bug Tracker = https://github.com/initc3/rscodes/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    gmpy2
    psutil

[options.packages.find]
where = src

[options.extras_require]
dev =
    ipdb
    ipython
docs =
    sphinx
    sphinx-autobuild
    sphinx-rtd-theme
    doc8
    pydocstyle
    recommonmark
test =
    black
    flake8
    flake8-bugbear
    flake8-import-order
    pep8-naming
    pytest
    pytest-mock
    pytest-cov
    pytest-xdist
    pytest-benchmark[histogram]
